public/scss/main.scss
@import "compass";
@import url("bootstrap.css");

@font-face {
    font-family: "Bariol-regular";
    src: url(../fonts/Bariol_Regular.otf) format("truetype");
}

@font-face {
    font-family: "Bariol-light";
    src: url(../fonts/Bariol_Light.otf) format("truetype");
}

@font-face {
    font-family: "Bariol-bold";
    src: url(../fonts/Bariol_Bold.otf) format("truetype");
}

@font-face {
    font-family: "Bariol-thin";
    src: url(../fonts/Bariol_Thin.otf) format("truetype");
}

@font-face {
    font-family: "Lato-regular";
    src: url(../fonts/Lato-Reg.ttf) format("truetype");
}

@font-face {
    font-family: "Lato-light";
    src: url(../fonts/Lato-Lig.ttf) format("truetype");
}

@font-face {
    font-family: "Lato-bold";
    src: url(../fonts/Lato-Bol.ttf) format("truetype");
}

@font-face {
    font-family: "Lato-hairline";
    src: url(../fonts/Lato-Hai.ttf) format("truetype");
}

$backgroundColor: #04699D;
$headerHeight: 53px;

body {
	background-color: $backgroundColor;
	color: white;
}

header {
	z-index: 100;
	position: absolute;
	width: 100%;
}

p, legend, h1, h2, h3, h4, h5, h6 {
    font-family: Lato-regular;
    color: white;
}

.navbar .nav {
	float: right;
	margin-right:0;
}

.navbar {
	height: 53px;
}

.navbar-inner {
	padding-right:0;
}

.container {
	width: 100%;
	margin-left: 0;
	margin-right: 0;
}

.navbar {
	border-radius: 0;
}

.navbar-header {
	float:left;
}

.error-container {
  margin-top: $headerHeight;
  padding-top: 2rem;
}

.welcome-content {
  margin-top: $headerHeight;
  padding-top: 2rem;
}

.appHeader {
  font-size: 3rem;
  font-family: Lato-Light;
  margin-bottom:3rem;
}

.stopInput {
  margin-top: 2rem;
  p {
    font-size: 1.6rem;
  }
}

.stops-typeahead {
	position: relative;
	text-align: center;
}

.twitter-typeahead {
	position: relative;
	margin-left: auto;
	margin-right: auto;
}

.tt-input,
.tt-hint {
    padding: 0.8rem 0.8rem;
    font-size: 1.7rem;
    border: 1px solid #ccc;
    outline: none;
    color: #757474;
    height: 3rem;
    width: 20rem;
    border-radius: 0;
    -webkit-box-shadow: 4px 3px 5px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    4px 3px 5px rgba(50, 50, 50, 0.2) !important;
    box-shadow:         4px 3px 5px rgba(50, 50, 50, 0.2) !important;
    left: auto !important;
}

.tt-input {
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}


.tt-dropdown-menu {
    width: 17rem;
    margin-top: 0;
    padding: 0;
    background-color: #fff;
	-webkit-box-shadow: 4px 3px 5px rgba(50,50,50,0.2);
	-moz-box-shadow: 4px 3px 5px rgba(50,50,50,0.2) !important;
	box-shadow: 4px 3px 5px rgba(50,50,50,0.2) !important;
}

.tt-suggestion {
  padding: 0.5rem 0.6rem;
  display:block;
  border-bottom: 1px solid #cccccc;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  cursor: pointer;
}

.tt-suggestion.tt-cursor {
    background-color: #eee;
}

.tt-suggestion p {
    margin: 0;
    color: #636363 !important;
}

.centered {
	text-align: center;
}

.btnContainer {
	text-align: center;
	margin-top: 2.5rem;
}

.btn-lg {
	border-radius: 3px;
	background-color: transparent;
	border-color: white;
	padding: 8px 16px;
  color: white;
}

.right-aligned {
	text-align: right;
}

.center-aligned {
	text-align: center;
}

.nextBus-content {
  padding-top: 2rem;
}

.nextHeader {
	font-size: 2.2rem;
	font-family: Lato-Light;
  line-height:1;
  //text-transform:uppercase;
  float: right;
  clear: both;
  margin-top:0.2rem;
}

.nextLabel {
  font-size: 1.5rem;
  font-family: Lato-Regular;
  margin-top: 2rem;
  float: right;
  clear: both;
  color: #1A2531;
  text-transform:uppercase;
}

.depStop {
  text-transform:uppercase;
  font-size: 1.6rem;
  font-family: Lato-light;
  opacity: 0.6;
  margin-bottom: 0.5rem;
}

.nextTime {
	font-family: Lato-hairline;
	font-size: 9rem;
	line-height: 0.75;
  float: right;
  clear: both;
}

.nextCounter {
    font-size: 1.6rem;
    font-family: Lato-light;
    -webkit-transition: color 0.5s linear;
    -moz-transition: color 0.5s linear;
    -ms-transition: color 0.5s linear;
    -o-transition: color 0.5s linear;
    transition: color 0.5s linear;
    color: white;
    float: right;
    clear: both;
    margin-top:0.9rem;
}

.nextArrival {
	font-family: Lato-Light;
	font-size: 1.4rem;
	margin-top: 0.3rem;
}

.nearing {
	color: rgb(255, 167, 71);
}

.swipableContainer {
  position: absolute;
  min-height: 380px;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
}

.swiper-content {
  position: absolute;
  left: 0;
  width: 100%;
  height: 100%;
  bottom: 0;
  z-index: 0;
}

.swiper-content .swiper-slide {
	padding-right: 2rem;
}

.tab-label {
	margin:0;
	font-size: 2rem;
	font-family: lato-Light;
	margin-top: 0.4rem;
}

.pagination {
	position: absolute;
	left: 0;
	text-align: center;
	bottom: 5px;
	width: 100%;
	z-index: 100;
}

.swiper-pagination-switch {
	display: inline-block;
	width: 10px;
	height: 10px;
	border-radius: 10px;
	background: #B3B3B3;
	margin: 0 3px;
	cursor: pointer;
}

.swiper-active-switch {
	background: #fff;
}

/* -------------- Clock Spinner -------------- */

.loading-container {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -40px;
  margin-left: -39px;
  p {
    margin-top: 10px;
  }
}

.clock{
  border-radius: 60px;
  border: 3px solid #fff;
  height: 80px;
  width: 80px;
  position: relative;
}

.clock:after{
  content: "";
  position: absolute;
  background-color: #fff;
  top: 1px;
  left: 47%;
  height: 37px;
  width: 4px;
  border-radius: 5px;
  -webkit-transform-origin: 50% 97%;
      transform-origin: 50% 97%;
  -webkit-animation: grdAiguille 2s linear infinite;
      animation: grdAiguille 2s linear infinite;
}

@-webkit-keyframes grdAiguille{
    0%{-webkit-transform:rotate(0deg);}
    100%{-webkit-transform:rotate(360deg);}
}

@keyframes grdAiguille{
    0%{transform:rotate(0deg);}
    100%{transform:rotate(360deg);}
}

.clock:before{
  content: "";
  position: absolute;
  background-color: #fff;
  top: 4px;
  left: 47%;
  height: 35px;
  width: 4px;
  border-radius: 5px;
  -webkit-transform-origin: 50% 94%;
      transform-origin: 50% 94%;
  -webkit-animation: ptAiguille 12s linear infinite;
      animation: ptAiguille 12s linear infinite;
}

@-webkit-keyframes ptAiguille{
    0%{-webkit-transform:rotate(0deg);}
    100%{-webkit-transform:rotate(360deg);}
}

@keyframes ptAiguille{
    0%{transform:rotate(0deg);}
    100%{transform:rotate(360deg);}
}

